mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mongostack
  name: mongodb-deployment
  labels:
    app: mongodb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - image: mongo
        name: mongodb
        ports:
        - containerPort: 27017
---
apiVersion: v1 
kind: Service
metadata:
  namespace: mongostack
  name: mongodb-service
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
    protocol: TCP
