mongoExpress-with-ingress-deploy.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-ingress
  namespace: mongostack
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: mongo.cloudarkitect.com
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: mongo-express-service
              port:
                number: 80
          

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mongostack
  labels:
    app: mongo-express
  name: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - image: mongo-express
        name: mongo-express
        ports:
          - containerPort: 8081
---

apiVersion: v1 
kind: Service
metadata:
  namespace: mongostack
  name: mongo-express-service
spec:
  selector:
    app: mongo-express
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8081
